--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="~/AdminLTE/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
     <!-- Bootstrap DatePicker -->
     <script src="~/AdminLTE/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/Scripts/ScriptsGenerales.js"></script>
     <script src="~/Scripts/moment.min.js"></script>
     @*<script src="~/bower_DevExpress/jquery/dist/jquery.min.js"></script>*@
     <link href="~/bower_DevExpress/jqueryui/themes/base/jquery-ui.css" rel="stylesheet" />
