--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
     <!-- Bootstrap DatePicker -->
     <script src="~/AdminLTE/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
     <script src="~/Scripts/moment.min.js"></script>
+    <script src="~/Scripts/ScriptsGenerales.js"></script>
     @*<script src="~/bower_DevExpress/jquery/dist/jquery.min.js"></script>*@
     <link href="~/bower_DevExpress/jqueryui/themes/base/jquery-ui.css" rel="stylesheet" />
     <script src="~/bower_DevExpress/jqueryui/jquery-ui.js"></script>
