--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
@@ -38,7 +38,17 @@
         return actualValues;
     }
 </script>
-
+<script>
+    function ModificarCbte() {
+        var location = GetPathServer();
+        var IdCbteCble = Number($("#IdCbteCble").val());
+        if (IdTipoCbte.GetValue() > 0 && IdCbteCble > 0)
+        {
+            var win = window.open(location + "/Contabilidad/ComprobanteContable/Modificar?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa +"&IdTipoCbte=" + IdTipoCbte.GetValue(), +"&IdCbteCble=" + IdCbteCble, '_blank');
+            win.focus();
+        }
+    }
+</script>
 @using (Html.BeginForm("CONTA_002", "ContabilidadReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -173,10 +183,10 @@
                 <!-- /.box-body -->
             </div>
         </div>
-        <div class="box">
+
+        <div class="box ">
             <div class="box-header with-border">
-                <h3 class="box-title">@ViewBag.Title</h3>
-                <div class="box-tools pull-right">
+                  <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
                         <i class="fa fa-minus"></i>
                     </button>
@@ -185,18 +195,78 @@
                     </button>
                 </div>
             </div>
+
             <div class="box-body">
-                @Html.DevExpress().WebDocumentViewer(settings =>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="IdCtaCble">Tipo comprobante</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdTipoCbte, settings =>
+                               {
+                                   settings.Name = "IdTipoCbte";
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                   settings.Properties.Columns.Add("IdTipoCbte", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                                   settings.Properties.Columns.Add("tc_TipoCbte", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
+                                   //Campo ID
+                                   settings.Properties.ValueField = "IdTipoCbte";
+                                   settings.Properties.ValueType = typeof(int);
+                                   settings.Properties.TextField = "tc_TipoCbte";
+                                   //Boton para seleccionar ningun registro
+                                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                   settings.Properties.NullText = "== Seleccione ==";
+                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                               }).BindList(ViewBag.lst_tipo).GetHtml()
+                                @Html.ValidationMessageFor(q => q.IdTipoCbte, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="IdCbteCble">#Comprobante</label>
+                                @Html.TextBoxFor(q => q.IdCbteCble, new { @class = "form-control", @id= "IdCbteCble" })
+                                @Html.ValidationMessageFor(q => q.IdCbteCble, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="IdTipoCbte"></label>
+                                <button type="button" class="btn btn-primary form-control " onclick="ModificarCbte();">
+                                    <i class="fa fa-external-link-square"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            </div>
+
+            <div class="box">
+                <div class="box-header with-border">
+                    <h3 class="box-title">@ViewBag.Title</h3>
+                    <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                            <i class="fa fa-minus"></i>
+                        </button>
+                        <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                            <i class="fa fa-times"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="box-body">
+                    @Html.DevExpress().WebDocumentViewer(settings =>
    {
        settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
        settings.MobileMode = false;
        settings.Name = "webDocumentViewer";
    }).Bind(ViewBag.Report).GetHtml()
+                </div>
+                <!-- /.box-body -->
+                <div class="box-footer">
+                    [@Session["IdEmpresa"]] @Session["nom_empresa"]
+                </div>
+                <!-- /.box-footer-->
             </div>
-            <!-- /.box-body -->
-            <div class="box-footer">
-                [@Session["IdEmpresa"]] @Session["nom_empresa"]
-            </div>
-            <!-- /.box-footer-->
-        </div>
-        }
+            }
