--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
@@ -85,6 +85,7 @@
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+        settings.ClientSideEvents.EndCallback = "function(s,e){ GetValor(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
