--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC.cshtml
@@ -49,6 +49,13 @@
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(20);
+            column.FieldName = "NumDocumento";
+            column.Caption = "# Doc reemplazo";
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(20);
             column.FieldName = "vt_total";
             column.Caption = "Total";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
