--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC_x_cruzar.cshtml
@@ -36,7 +36,8 @@
         settings.Columns.Add("IdCbteVta_fac_nd_doc_mod", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("vt_tipoDoc", "Tipo").Width = Unit.Percentage(10);
         settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
-        settings.Columns.Add("vt_NumDocumento", "# Documento").Width = Unit.Percentage(20);
+        settings.Columns.Add("vt_NumDocumento", "# Documento").Width = Unit.Percentage(10);
+        settings.Columns.Add("NumDocumento", "# Doc reemplazo").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(10);
