--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_CruceND.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_CruceND.cshtml
@@ -47,6 +47,14 @@
             column.Caption = "# Documento";
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
+
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "NumDocumento";
+            column.Caption = "# Doc reemplazo";
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(20);
