--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Modificar.cshtml
@@ -14,6 +14,11 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdAjuste, new { @id = "IdAjuste" })
+    @Html.HiddenFor(q => q.IdMovi_inven_tipo_ing, new { @id = "IdMovi_inven_tipo_ing" })
+    @Html.HiddenFor(q => q.IdMovi_inven_tipo_egr, new { @id = "IdMovi_inven_tipo_egr" })
+    @Html.HiddenFor(q => q.IdNumMovi_ing, new { @id = "IdNumMovi_ing" })
+    @Html.HiddenFor(q => q.IdNumMovi_egr, new { @id = "IdNumMovi_egr" })
+
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -39,7 +44,7 @@
                     @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdMotivo_Inv">Estado*</label>
                     @Html.DropDownListFor(q => q.IdCatalogo_Estado, new SelectList(ViewBag.lst_estado, "IdCatalogo", "Nombre"), new { @class = "form-control", @id = "IdCatalogo_Estado" })
@@ -66,14 +71,22 @@
                     </div>
                 </div>
             </div>
-            @*<div class="col-md-1">
-                <label for="ID"></label>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
                 <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_cargar_detalle" onclick="CargarDetalle();" title="Cargar detalle">
-                        <i class="fa fa-search"></i>
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
                     </button>
                 </div>
-            </div>*@
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","AjusteFisicoInventario",new { Area = "Inventario", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -108,64 +121,70 @@
 }
 
 <script type="text/javascript">
-$(function () {
-    CargarBodega();
-    $("#IdSucursal").change(function () {
+    $(function () {
         CargarBodega();
+        $("#IdSucursal").change(function () {
+            CargarBodega();
+        });
     });
-});
 
-function CargarBodega() {
-$("#IdBodega").empty();
+    function CargarBodega() {
+        $("#IdBodega").empty();
 
-var datos = {
-    IdEmpresa: $("#IdEmpresa").val(),
-    IdSucursal: $("#IdSucursal").val()
-}
-
-$.ajax({
-    type: 'POST',
-    data: JSON.stringify(datos),
-    url: '@Url.Action("CargarBodega", "AjusteFisicoInventario", new { Area = "Inventario" })',
-    async: false,
-    bDeferRender: true,
-    bProcessing: true,
-    dataType: 'json',
-    contentType: 'application/json; charset=utf-8',
-    success: function (data) {
-    $.each(data, function (i, row) {
-        $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
-    });
-    },
-    error: function (error) {
-    }
-    });
-};
-
-function CargarDetalle() {
-    var datos = {
-        IdTransaccionSession: $("#IdTransaccionSession").val(),
-        Fecha: Fecha.GetDate(),
-        IdEmpresa: $("#IdEmpresa").val(),
-        IdSucursal: $("#IdSucursal").val(),
-        IdBodega: $("#IdBodega").val()        
-    }
-    $.ajax({
-        type: 'POST',
-        data: JSON.stringify(datos),
-        url: '@Url.Action("CargarDetalleAjuste", "AjusteFisicoInventario", new { Area = "Inventario" })',
-        async: false,
-        bDeferRender: true,
-        bProcessing: true,
-        dataType: 'json',
-        contentType: 'application/json; charset=utf-8',
-        success: function (data) {
-            console.log(data);
-        },
-        error: function (error) {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val()
         }
-    });
 
-    GridViewPartial_ajuste_fisico_det.PerformCallback();
-}
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarBodega", "AjusteFisicoInventario", new { Area = "Inventario" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
+
+    function CargarDetalle() {
+        var datos = {
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            Fecha: Fecha.GetDate(),
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IdBodega: $("#IdBodega").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarDetalleAjuste", "AjusteFisicoInventario", new { Area = "Inventario" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+            },
+            error: function (error) {
+            }
+        });
+
+        GridViewPartial_ajuste_fisico_det.PerformCallback();
+    }
+
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/InventarioReportes/INV_018?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdAjuste="+@Model.IdAjuste, '_blank');
+        win.focus();
+    }
 </script>
