--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/Anular.cshtml
@@ -14,6 +14,11 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdAjuste, new { @id = "IdAjuste" })
+    @Html.HiddenFor(q => q.IdMovi_inven_tipo_ing, new { @id = "IdMovi_inven_tipo_ing" })
+    @Html.HiddenFor(q => q.IdMovi_inven_tipo_egr, new { @id = "IdMovi_inven_tipo_egr" })
+    @Html.HiddenFor(q => q.IdNumMovi_ing, new { @id = "IdNumMovi_ing" })
+    @Html.HiddenFor(q => q.IdNumMovi_egr, new { @id = "IdNumMovi_egr" })
+
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -39,7 +44,7 @@
                     @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdMotivo_Inv">Estado*</label>
                     @Html.DropDownListFor(q => q.IdCatalogo_Estado, new SelectList(ViewBag.lst_estado, "IdCatalogo", "Nombre"), new { @class = "form-control", @id = "IdCatalogo_Estado" })
@@ -68,7 +73,6 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -76,6 +80,17 @@
                     <label for="cm_observacion">Observación</label>
                     @Html.TextAreaFor(q => q.Observacion, new { @class = "form-control", @rows = 3 })
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="cm_observacion">Motivo de anulacion</label>
+                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @rows = 3 })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
